Simplified writing agent tests using async functions that wait for Promises.
Promisified many net operations and agent management in ProxyCase.

We now require ES7 (ECMAScript 2016) and bluebird Promises.

--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
         "yoda": [2, "never", { "exceptRange": true }],
         "quotes": false,
         "comma-dangle": false,
+        "space-infix-ops": false,
         "strict": false
     }
 }
