--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "mocha": "~2.2.5",
     "eslint": "~1.10.3",
     "babel": "~5.5.6",
-    "babel-eslint": "~3.1.15"
+    "babel-eslint": "~3.1.15",
+    "bluebird": "~3.1.1"
   }
 }
