--- a/.eslintrc
+++ b/.eslintrc
@@ -24,7 +24,6 @@
         "no-array-constructor": 2,
         "no-caller": 2,
         "no-catch-shadow": 2,
-        "no-empty-label": 2,
         "no-eval": 2,
         "no-extend-native": 2,
         "no-extra-bind": 2,
@@ -63,7 +62,7 @@
         "new-parens": 2,
         "semi": 2,
         "semi-spacing": [2, {"before": false, "after": true}],
-        "space-return-throw-case": 2,
+        "keyword-spacing": 2,
         "space-unary-ops": [2, { "words": true, "nonwords": false }],
     }
 }
