--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "devDependencies": {
-    "mocha": "~2.2.5",
-    "eslint": "~1.10.3",
-    "babel": "~5.5.6",
-    "babel-eslint": "~3.1.15",
-    "bluebird": "~3.1.1"
+    "babel-eslint": "5.0.0",
+    "babel-plugin-transform-async-to-module-method": "6.7.0",
+    "babel-plugin-transform-runtime": "6.6.0",
+    "babel-preset-es2015": "6.6.0",
+    "babel-register": "6.7.2",
+    "bluebird": "3.3.4",
+    "eslint": "2.4.0",
+    "estraverse-fb": "1.3.1",
+    "mocha": "2.4.5"
   }
 }
