--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "devDependencies": {
     "babel-eslint": "5.0.0",
     "babel-plugin-transform-async-to-module-method": "6.7.0",
-    "babel-plugin-transform-runtime": "6.6.0",
+    "babel-polyfill": "6.7.2",
     "babel-preset-es2015": "6.6.0",
     "babel-register": "6.7.2",
     "bluebird": "3.3.4",
