--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,8 @@
         [
             "transform-async-to-module-method",
             { "module": "bluebird", "method": "coroutine" }
-        ]
+        ],
+        "transform-exponentiation-operator",
+        "transform-object-rest-spread"
     ]
 }
