--- a/package.json
+++ b/package.json
@@ -2,15 +2,18 @@
   "devDependencies": {
     "babel-eslint": "5.0.0",
     "babel-register": "6.7.2",
+    "big-integer": "^1.6.15",
     "eslint": "2.4.0",
     "estraverse-fb": "1.3.1",
     "mocha": "2.4.5"
   },
   "dependencies": {
-    "bluebird": "3.3.4",
     "babel-cli": "6.6.5",
     "babel-plugin-transform-async-to-module-method": "6.7.0",
+    "babel-plugin-transform-exponentiation-operator": "^6.5.0",
+    "babel-plugin-transform-object-rest-spread": "^6.6.5",
     "babel-polyfill": "6.7.2",
-    "babel-preset-es2015": "6.6.0"
+    "babel-preset-es2015": "6.6.0",
+    "bluebird": "3.3.4"
   }
 }
