--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "mocha": "2.4.5"
   },
   "dependencies": {
-    "bluebird": "3.3.4",
     "babel-cli": "6.6.5",
     "babel-plugin-transform-async-to-module-method": "6.7.0",
     "babel-polyfill": "6.7.2",
-    "babel-preset-es2015": "6.6.0"
+    "babel-preset-es2015": "6.6.0",
+    "bluebird": "3.3.4",
+    "optionator": "0.8.1"
   }
 }
