--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-polyfill": "6.7.2",
     "babel-preset-es2015": "6.6.0",
     "bluebird": "3.3.4",
+    "esm": "^3.2.20",
     "optionator": "0.8.1"
   }
 }
