--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-    "parser": "babel-eslint",
+    "parser": "babel-eslint", // dynamic import() chokes native eslint parser
     "env": {
         "node": true,
         "es6": true,
