--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "devDependencies": {
-    "babel-eslint": "5.0.0",
+    "babel-eslint": "^10.0.1",
     "babel-register": "6.7.2",
-    "eslint": "2.4.0",
+    "eslint": "^5.15.3",
     "estraverse-fb": "1.3.1",
     "mocha": "2.4.5"
   },
