--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "devDependencies": {
-    "babel-cli": "6.6.5",
+    "babel-cli": "^6.26.0",
     "babel-eslint": "^10.0.1",
-    "babel-plugin-transform-async-to-module-method": "6.7.0",
-    "babel-polyfill": "6.7.2",
-    "babel-preset-es2015": "6.6.0",
-    "babel-register": "6.7.2",
+    "babel-plugin-transform-async-to-module-method": "^6.24.1",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.26.0",
     "eslint": "^5.15.3",
-    "estraverse-fb": "1.3.1",
+    "estraverse-fb": "^1.3.2",
     "mocha": "^6.0.2"
   },
   "dependencies": {
-    "bluebird": "3.3.4",
+    "bluebird": "^3.5.3",
     "esm": "^3.2.20",
-    "optionator": "0.8.1"
+    "optionator": "^0.8.2"
   }
 }
