--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.26.0",
     "eslint": "^5.15.3",
-    "estraverse-fb": "^1.3.2",
-    "mocha": "^6.0.2"
+    "estraverse-fb": "^1.3.2"
   },
   "dependencies": {
     "bluebird": "^3.5.3",
