--- a/package.json
+++ b/package.json
@@ -1,13 +1,7 @@
 {
   "devDependencies": {
-    "babel-cli": "^6.26.0",
     "babel-eslint": "^10.0.1",
-    "babel-plugin-transform-async-to-module-method": "^6.24.1",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "eslint": "^5.15.3",
-    "estraverse-fb": "^1.3.2"
+    "eslint": "^5.15.3"
   },
   "dependencies": {
     "bluebird": "^3.5.3",
